Understand about libman.jsob file

--- a/FirstDotNetCoreWebProject/Views/Student/Details.cshtml
+++ b/FirstDotNetCoreWebProject/Views/Student/Details.cshtml
@@ -6,10 +6,10 @@
 
 <h1>Details</h1>
 
-<div>
+<div class="card alert-success">
     <h4>Student</h4>
     <hr />
-    <dl class="row">
+    <dl class="card-body">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
